# patroclus

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  util.rs
src/bits/: mod.rs  tests.rs
src/movegen/: magic.rs  mod.rs  util.rs
src/position/: board.rs  castling.rs  mailbox.rs  mod.rs  util.rs  zobrist.rs
