[package]
name = "patroclus"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mattngaw/patroclus"
readme = "README.md"
include = [
    "src/*",
    "Cargo.toml",
    "README.md",
]

[[bin]]
name = "patroclus"
path = "src/main.rs"

[lib]
name = "patroclus"
path = "src/lib.rs"

[dependencies]