[package]
name = "patroclus"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mattngaw/patroclus"
readme = "README.md"
include = [
    "src/*",
    "Cargo.toml",
    "README.md",
]

[[bin]]
name = "patroclus"
path = "src/main.rs"

[lib]
name = "patroclus"
path = "src/lib.rs"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

[dependencies]
log = { version = "0.4", features = [ "max_level_trace", "release_max_level_warn" ] }
env_logger = "0.10"
test-env-log = "0.2"
itertools = "0.10"
const-random = "0.1"
